Add Admin Controller and View

--- a/CompanyApp/Views/Admins/EditorTemplates/SelectEmployeeViewModel.cshtml
+++ b/CompanyApp/Views/Admins/EditorTemplates/SelectEmployeeViewModel.cshtml
@@ -10,6 +10,7 @@
     </td>
     <td>
         @Html.DisplayFor(model => model.Id)
+        @Html.Hidden("Id", Model.Id)
     </td>
     <td>
         @Html.DisplayFor(model => model.Name)
