--- a/CompanyApp/Views/Roles/Create.cshtml
+++ b/CompanyApp/Views/Roles/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Microsoft.AspNetCore.Identity.IdentityRole
+﻿@model Micro
+            < a href = "~/Views/Roles/Details.cshtml" > ~/ Views / Roles / Details.cshtml </ a > soft.AspNetCore.Identity.IdentityRole
 
 @{
     ViewData["Title"] = "Create";
